--- a/views/home/_step_1.twig
+++ b/views/home/_step_1.twig
@@ -1,4 +1,4 @@
-{% if project %}
+{% if step > 1 %}
 
 	<input type="hidden" name="project_id" value="{{ project.id }}" />
 	<input type="hidden" name="year" value="{{ year }}" />
@@ -15,6 +15,7 @@
 	{% include 'home/_step_2.twig' %}
 
 {% else %}
+	<input type="hidden" name="step" value="2" />
 	<h4>Выберите проект:</h4>
 	{% if project_list %}
 		<div class="form-row">
